--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -9,3 +9,13 @@ main {
 .card.skills p {
 	margin: 0;
 }
+
+@media (max-width:  576px) {
+	h6, p, li, td {
+		font-size: 12px;
+	}
+
+	.leadership td b {
+		font-size: 11px;
+	}
+}
